--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,354 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #141414;
+  color: white;
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 20px;
+}
+
+h1 {
+  margin-bottom: 20px;
+}
+
+.carousel {
+  display: grid; 
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+  gap: 20px;
+  padding: 20px;
+  max-width: 1300px; 
+}
+
+.carousel::-webkit-scrollbar {
+  display: none; 
+}
+
+.card {
+  background-color: #222;
+  border-radius: 12px;
+  margin-right: 20px;
+  transition: transform 0.3s;
+  cursor: pointer;
+  width: 200px;
+  height: 375px;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card img {
+  border-radius: 8px 8px 0 0;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.card-title {
+  padding: 10px;
+  text-align: center; 
+  font-weight: bold;
+  color: #9e9e9e;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.2em;
+}
+
+.card-title a {
+  color: white;
+  text-decoration: none;
+}
+
+.card-title a:visited {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card-title a:hover {
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.with_no {
+  text-decoration: none;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(20, 20, 20, 0.8);
+  margin-right: 20px;
+  padding: 10px 20px;
+  position: sticky;
+  top: 0;
+  z-index: 1000; 
+}
+
+.logo {
+  font-size: 24px; 
+  font-weight: bold;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #00ffcc;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.menu-items {
+  list-style: none;
+  display: flex; 
+  gap: 20px; 
+}
+
+.menu-items li {
+  position: relative; 
+}
+
+.menu-items a {
+  text-decoration: none; 
+  color: white; 
+  transition: color 0.3s; 
+}
+
+.menu-items a::after {
+  content: ""; 
+  position: absolute; 
+  left: 0; 
+  bottom: -4px; 
+  width: 100%; 
+  height: 2px; 
+  background-color: #00ffcc; 
+  transform: scaleX(0); 
+  transition: transform 0.3s ease;
+}
+
+.menu-items a:hover {
+  color: #00ffcc; 
+}
+
+.menu-items a:hover::after {
+  transform: scaleX(1); 
+}
+
+.header h1 {
+  color: rgb(151, 238, 238);
+  font-size: 35px;
+}
+
+.slider {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden; 
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0; 
+  transition: opacity 1s ease-in-out; 
+}
+
+.slide.active {
+  opacity: 1; 
+}
+
+.slide img {
+  width: 100%;
+  height: 100%; 
+  object-fit: cover;
+}
+
+.slide-content {
+  position: absolute;
+  bottom: 20px; 
+  left: 20px; 
+  color: white; 
+}
+
+.slide-content h1 {
+  font-size: 2rem; 
+  margin: 0; 
+}
+
+.slide-content p {
+  font-size: 1.2rem; 
+}
+
+.about-container {
+  padding: 20px;
+  color: white; 
+  background-color: #141414; 
+  max-width: 800px; 
+  margin: auto; 
+  border-radius: 8px; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+}
+
+.about-container h1, h2 {
+  color: #00ffcc; 
+}
+
+ul {
+  list-style-type: none; 
+  padding: 0; 
+}
+
+ul li {
+  margin: 10px 0; 
+}
+
+.container {
+  padding: 20px;
+}
+
+.header {
+  width: 80%;
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+}
+
+.search-container {
+  position: relative;
+}
+
+.search-input {
+  background-color: #2c2b2b;
+  color: aliceblue;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #171717;
+  border-radius: 8px;
+  width: 200px; 
+}
+
+/* ---------------------- */
+
+.anime-detail {
+  padding: 20px;
+  background-color: #111111; 
+  border-radius: 15px; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+  max-width: 1100px;
+  margin: 0 auto; 
+}
+
+.detail-header {
+  margin-bottom: 20px; 
+}
+
+.anime-title {
+  font-size: 2.5rem; 
+  color: #ffffff; 
+  margin: 0; 
+}
+
+.anime-description {
+  font-size: 1.2rem; 
+  color: #ffffff; 
+  line-height: 1.5; 
+}
+
+.recommendations-carousel {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px; 
+  margin-top: 20px; 
+}
+
+.recommendation-card {
+  flex: 0 0 200px; 
+  border: 1px solid #191919; 
+  border-radius: 8px; 
+  overflow: hidden; 
+  transition: transform 0.3s; 
+}
+.recommendation-card img {
+  width: 100%;
+  height: 350px;
+}
+
+.recommendation-card:hover {
+  transform: scale(1.05); 
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); 
+}
+
+.recommendation-image {
+  width: 100%; 
+  height: auto; 
+}
+
+.recommendation-title {
+  padding: 10px;
+  text-align: center; 
+  font-weight: bold;
+  color: #9e9e9e; 
+}
+
+
+@media (max-width: 768px) {
+  .container {
+    padding: 5px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .carousel {
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 12px; 
+    padding: 15px; 
+    width: 100%; 
+  }
+
+  .card {
+    height: auto; 
+    margin: 0; 
+  }
+
+  .anime-title {
+    font-size: 1.5rem; 
+  }
+
+  .anime-description {
+    font-size: 0.9rem; 
+  }
+
+  .recommendations-carousel {
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 16px; 
+    justify-content: center; 
+    margin-top: 20px; 
+  }
+
+  .recommendation-card {
+    flex: 0 1 calc(50% - 10px); 
+    border: 1px solid #191919; 
+    border-radius: 8px; 
+    overflow: hidden; 
+    transition: transform 0.3s; 
+  }
+
+  .recommendation-card img {
+    width: 100%; 
+    height: auto; 
+  }
+
+  .menu {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .menu-items {
+    flex-direction: row; 
+    gap: 10px; 
+  }
+
+  .search-input {
+    width: 100%;  
   }
 }
