--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,20 @@ h1 {
   margin-bottom: 20px;
 }
 
-.carousel {
+/* .carousel {
   display: grid; 
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
   gap: 20px;
   padding: 20px;
   max-width: 1300px; 
+} */
+
+.carousel {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px; 
+  margin-top: 20px;
+  justify-content: center;
 }
 
 .carousel::-webkit-scrollbar {
@@ -32,11 +40,10 @@ h1 {
 .card {
   background-color: #222;
   border-radius: 12px;
-  margin-right: 20px;
   transition: transform 0.3s;
   cursor: pointer;
-  width: 200px;
-  height: 375px;
+  flex: 0 0 200px;
+  overflow: hidden;
 }
 
 .card:hover {
@@ -76,16 +83,52 @@ h1 {
   text-decoration: none;
 }
 
+.recommendations-carousel {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px; 
+  margin-top: 20px; 
+}
+
+.recommendation-card {
+  flex: 0 0 200px; 
+  border: 1px solid #191919; 
+  border-radius: 8px; 
+  overflow: hidden; 
+  transition: transform 0.3s; 
+}
+.recommendation-card img {
+  width: 100%;
+  height: 350px;
+}
+
+.recommendation-card:hover {
+  transform: scale(1.05); 
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); 
+}
+
+.recommendation-image {
+  width: 100%; 
+  height: auto; 
+}
+
+.recommendation-title {
+  padding: 10px;
+  text-align: center; 
+  font-weight: bold;
+  color: #9e9e9e; 
+}
+
 .menu {
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: rgba(20, 20, 20, 0.8);
-  margin-right: 20px;
   padding: 10px 20px;
   position: sticky;
   top: 0;
-  z-index: 1000; 
+  z-index: 1000;
+  width: 97.3%;
 }
 
 .logo {
@@ -135,6 +178,7 @@ h1 {
 .header h1 {
   color: rgb(151, 238, 238);
   font-size: 35px;
+  height: 50px;
 }
 
 .slider {
@@ -251,42 +295,6 @@ ul li {
   font-size: 1.2rem; 
   color: #ffffff; 
   line-height: 1.5; 
-}
-
-.recommendations-carousel {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px; 
-  margin-top: 20px; 
-}
-
-.recommendation-card {
-  flex: 0 0 200px; 
-  border: 1px solid #191919; 
-  border-radius: 8px; 
-  overflow: hidden; 
-  transition: transform 0.3s; 
-}
-.recommendation-card img {
-  width: 100%;
-  height: 350px;
-}
-
-.recommendation-card:hover {
-  transform: scale(1.05); 
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); 
-}
-
-.recommendation-image {
-  width: 100%; 
-  height: auto; 
-}
-
-.recommendation-title {
-  padding: 10px;
-  text-align: center; 
-  font-weight: bold;
-  color: #9e9e9e; 
 }
 
 
