--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@ h1 {
 }
 
 .card {
-  background-color: #222;
+  background-color: #111111;
+  border: .1em solid #222 ;
   border-radius: 12px;
   transition: transform 0.3s;
   cursor: pointer;
@@ -61,7 +62,7 @@ h1 {
   padding: 10px;
   text-align: center; 
   font-weight: bold;
-  color: #9e9e9e;
+  color: #aaaaaa;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.2em;
 }
@@ -135,7 +136,7 @@ h1 {
   font-size: 24px; 
   font-weight: bold;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #00ffcc;
+  color: #72e2cb;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -314,6 +315,15 @@ ul li {
   .card {
     height: auto; 
     margin: 0; 
+  }
+
+  .header {
+    display: block;
+    justify-content: center;
+  }
+
+  .header h1{
+    font-size: 18px;
   }
 
   .anime-title {
